Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -1133,7 +1133,7 @@ section {
     .card {
         box-shadow: none;
         break-inside: avoid-page;
-        display: block; /* Make element unbreakable for Safari */
+        display: grid; /* Make element unbreakable for Safari */
         box-shadow: var(--box-shadow-tiny-light-mode);
     }
 
